# aurora

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
include/aurora/: ThreadManager.hpp  aurora.hpp  log.hpp
include/aurora/singletons/: TargetManager.hpp  ThreadManager.hpp  singletons.hpp
pch/: namespace.hpp
src/: ThreadManager.cpp  log.cpp
src/singletons/: TargetManger.cpp  ThreadManager.cpp
